--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/apollo": "^13.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/graphql": "^13.1.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^6.8.2",
+    "graphql": "^16.11.0",
+    "prisma": "^6.8.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
